--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@ crossbeam-channel = "0.5.0"
 sysinfo = "0.15.6"
 peroxide = "0.30.9"
 bincode = "1.3.3"
+itertools = "0.10.3"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 linux-embedded-hal = "0.2.2"
