--- a/tests/integration/specs/lora_wifi_beacon_placement.toml
+++ b/tests/integration/specs/lora_wifi_beacon_placement.toml
@@ -26,12 +26,14 @@ y = 0.0
 Protocol = "LoraWifiBeacon"
 
 [initial_nodes.node9.radio_short]
-reliability = 1.0
+mac_layer_retries = 10
+mac_layer_base_wait = 9
 interface_name = "wlan0"
 range = 20.0
 
 [initial_nodes.node9.radio_long]
-reliability = 1.0
+mac_layer_retries = 10
+mac_layer_base_wait = 9
 interface_name = "wlan1"
 range = 38.0
 
@@ -54,12 +56,14 @@ y = 0.0
 Protocol = "LoraWifiBeacon"
 
 [initial_nodes.node13.radio_short]
-reliability = 1.0
+mac_layer_retries = 10
+mac_layer_base_wait = 9
 interface_name = "wlan0"
 range = 20.0
 
 [initial_nodes.node13.radio_long]
-reliability = 1.0
+mac_layer_retries = 10
+mac_layer_base_wait = 9
 interface_name = "wlan1"
 range = 38.0
 
@@ -82,12 +86,14 @@ range = 38.0
 # Protocol = "LoraWifiBeacon"
 
 # [initial_nodes.node18.radio_short]
-# reliability = 1.0
+# mac_layer_retries = 10
+# mac_layer_base_wait = 9
 # interface_name = "wlan0"
 # range = 20.0
 
 # [initial_nodes.node18.radio_long]
-# reliability = 1.0
+# mac_layer_retries = 10
+# mac_layer_base_wait = 9
 # interface_name = "wlan1"
 # range = 38.0
 
@@ -110,12 +116,14 @@ range = 38.0
 # Protocol = "LoraWifiBeacon"
 
 # [initial_nodes.node19.radio_short]
-# reliability = 1.0
+# mac_layer_retries = 10
+# mac_layer_base_wait = 9
 # interface_name = "wlan0"
 # range = 20.0
 
 # [initial_nodes.node19.radio_long]
-# reliability = 1.0
+# mac_layer_retries = 10
+# mac_layer_base_wait = 9
 # interface_name = "wlan1"
 # range = 38.0
 
@@ -138,12 +146,14 @@ range = 38.0
 # Protocol = "LoraWifiBeacon"
 
 # [initial_nodes.node15.radio_short]
-# reliability = 1.0
+# mac_layer_retries = 10
+# mac_layer_base_wait = 9
 # interface_name = "wlan0"
 # range = 20.0
 
 # [initial_nodes.node15.radio_long]
-# reliability = 1.0
+# mac_layer_retries = 10
+# mac_layer_base_wait = 9
 # interface_name = "wlan1"
 # range = 38.0
 
@@ -166,12 +176,14 @@ y = 0.0
 Protocol = "LoraWifiBeacon"
 
 [initial_nodes.node1.radio_short]
-reliability = 1.0
+mac_layer_retries = 10
+mac_layer_base_wait = 9
 interface_name = "wlan0"
 range = 20.0
 
 [initial_nodes.node1.radio_long]
-reliability = 1.0
+mac_layer_retries = 10
+mac_layer_base_wait = 9
 interface_name = "wlan1"
 range = 38.0
 
@@ -194,12 +206,14 @@ y = 0.0
 Protocol = "LoraWifiBeacon"
 
 [initial_nodes.node2.radio_short]
-reliability = 1.0
+mac_layer_retries = 10
+mac_layer_base_wait = 9
 interface_name = "wlan0"
 range = 20.0
 
 [initial_nodes.node2.radio_long]
-reliability = 1.0
+mac_layer_retries = 10
+mac_layer_base_wait = 9
 interface_name = "wlan1"
 range = 38.0
 
@@ -222,12 +236,14 @@ range = 38.0
 # Protocol = "LoraWifiBeacon"
 
 # [initial_nodes.node20.radio_short]
-# reliability = 1.0
+# mac_layer_retries = 10
+# mac_layer_base_wait = 9
 # interface_name = "wlan0"
 # range = 20.0
 
 # [initial_nodes.node20.radio_long]
-# reliability = 1.0
+# mac_layer_retries = 10
+# mac_layer_base_wait = 9
 # interface_name = "wlan1"
 # range = 38.0
 
@@ -250,12 +266,14 @@ y = 0.0
 Protocol = "LoraWifiBeacon"
 
 [initial_nodes.node4.radio_short]
-reliability = 1.0
+mac_layer_retries = 10
+mac_layer_base_wait = 9
 interface_name = "wlan0"
 range = 20.0
 
 [initial_nodes.node4.radio_long]
-reliability = 1.0
+mac_layer_retries = 10
+mac_layer_base_wait = 9
 interface_name = "wlan1"
 range = 38.0
 
@@ -278,12 +296,14 @@ y = 0.0
 Protocol = "LoraWifiBeacon"
 
 [initial_nodes.node8.radio_short]
-reliability = 1.0
+mac_layer_retries = 10
+mac_layer_base_wait = 9
 interface_name = "wlan0"
 range = 20.0
 
 [initial_nodes.node8.radio_long]
-reliability = 1.0
+mac_layer_retries = 10
+mac_layer_base_wait = 9
 interface_name = "wlan1"
 range = 38.0
 
@@ -306,12 +326,14 @@ range = 38.0
 # Protocol = "LoraWifiBeacon"
 
 # [initial_nodes.node5.radio_short]
-# reliability = 1.0
+# mac_layer_retries = 10
+# mac_layer_base_wait = 9
 # interface_name = "wlan0"
 # range = 20.0
 
 # [initial_nodes.node5.radio_long]
-# reliability = 1.0
+# mac_layer_retries = 10
+# mac_layer_base_wait = 9
 # interface_name = "wlan1"
 # range = 38.0
 
@@ -334,12 +356,14 @@ range = 38.0
 # Protocol = "LoraWifiBeacon"
 
 # [initial_nodes.node17.radio_short]
-# reliability = 1.0
+# mac_layer_retries = 10
+# mac_layer_base_wait = 9
 # interface_name = "wlan0"
 # range = 20.0
 
 # [initial_nodes.node17.radio_long]
-# reliability = 1.0
+# mac_layer_retries = 10
+# mac_layer_base_wait = 9
 # interface_name = "wlan1"
 # range = 38.0
 
@@ -362,12 +386,14 @@ y = 0.0
 Protocol = "LoraWifiBeacon"
 
 [initial_nodes.node7.radio_short]
-reliability = 1.0
+mac_layer_retries = 10
+mac_layer_base_wait = 9
 interface_name = "wlan0"
 range = 20.0
 
 [initial_nodes.node7.radio_long]
-reliability = 1.0
+mac_layer_retries = 10
+mac_layer_base_wait = 9
 interface_name = "wlan1"
 range = 38.0
 
@@ -390,12 +416,14 @@ y = 0.0
 Protocol = "LoraWifiBeacon"
 
 [initial_nodes.node12.radio_short]
-reliability = 1.0
+mac_layer_retries = 10
+mac_layer_base_wait = 9
 interface_name = "wlan0"
 range = 20.0
 
 [initial_nodes.node12.radio_long]
-reliability = 1.0
+mac_layer_retries = 10
+mac_layer_base_wait = 9
 interface_name = "wlan1"
 range = 38.0
 
@@ -418,12 +446,14 @@ y = 0.0
 Protocol = "LoraWifiBeacon"
 
 [initial_nodes.node11.radio_short]
-reliability = 1.0
+mac_layer_retries = 10
+mac_layer_base_wait = 9
 interface_name = "wlan0"
 range = 20.0
 
 [initial_nodes.node11.radio_long]
-reliability = 1.0
+mac_layer_retries = 10
+mac_layer_base_wait = 9
 interface_name = "wlan1"
 range = 38.0
 
@@ -446,12 +476,14 @@ range = 38.0
 # Protocol = "LoraWifiBeacon"
 
 # [initial_nodes.node10.radio_short]
-# reliability = 1.0
+# mac_layer_retries = 10
+# mac_layer_base_wait = 9
 # interface_name = "wlan0"
 # range = 20.0
 
 # [initial_nodes.node10.radio_long]
-# reliability = 1.0
+# mac_layer_retries = 10
+# mac_layer_base_wait = 9
 # interface_name = "wlan1"
 # range = 38.0
 
@@ -474,12 +506,14 @@ y = 0.0
 Protocol = "LoraWifiBeacon"
 
 [initial_nodes.node6.radio_short]
-reliability = 1.0
+mac_layer_retries = 10
+mac_layer_base_wait = 9
 interface_name = "wlan0"
 range = 20.0
 
 [initial_nodes.node6.radio_long]
-reliability = 1.0
+mac_layer_retries = 10
+mac_layer_base_wait = 9
 interface_name = "wlan1"
 range = 38.0
 
@@ -502,12 +536,14 @@ y = 0.0
 Protocol = "LoraWifiBeacon"
 
 [initial_nodes.node14.radio_short]
-reliability = 1.0
+mac_layer_retries = 10
+mac_layer_base_wait = 9
 interface_name = "wlan0"
 range = 20.0
 
 [initial_nodes.node14.radio_long]
-reliability = 1.0
+mac_layer_retries = 10
+mac_layer_base_wait = 9
 interface_name = "wlan1"
 range = 38.0
 
@@ -530,12 +566,14 @@ range = 38.0
 # Protocol = "LoraWifiBeacon"
 
 # [initial_nodes.node16.radio_short]
-# reliability = 1.0
+# mac_layer_retries = 10
+# mac_layer_base_wait = 9
 # interface_name = "wlan0"
 # range = 20.0
 
 # [initial_nodes.node16.radio_long]
-# reliability = 1.0
+# mac_layer_retries = 10
+# mac_layer_base_wait = 9
 # interface_name = "wlan1"
 # range = 38.0
 
@@ -558,12 +596,14 @@ y = 0.0
 Protocol = "LoraWifiBeacon"
 
 [initial_nodes.node3.radio_short]
-reliability = 1.0
+mac_layer_retries = 10
+mac_layer_base_wait = 9
 interface_name = "wlan0"
 range = 20.0
 
 [initial_nodes.node3.radio_long]
-reliability = 1.0
+mac_layer_retries = 10
+mac_layer_base_wait = 9
 interface_name = "wlan1"
 range = 38.0
 
