--- a/tests/integration/specs/aodvda_basic.toml
+++ b/tests/integration/specs/aodvda_basic.toml
@@ -31,7 +31,8 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node2.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
@@ -51,7 +52,8 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node7.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
@@ -71,7 +73,8 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node8.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
@@ -91,7 +94,8 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node16.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
@@ -111,7 +115,8 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node22.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
@@ -131,7 +136,8 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node12.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
@@ -151,7 +157,8 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node15.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
@@ -171,7 +178,8 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node20.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
@@ -191,7 +199,8 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node6.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
@@ -211,7 +220,8 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node14.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
@@ -231,7 +241,8 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node4.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
@@ -251,7 +262,8 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node17.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
@@ -271,7 +283,8 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node21.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
@@ -291,7 +304,8 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node5.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
@@ -311,7 +325,8 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node23.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
@@ -331,7 +346,8 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node11.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
@@ -351,7 +367,8 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node24.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
@@ -371,7 +388,8 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node25.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
@@ -391,7 +409,8 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node10.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
@@ -411,7 +430,8 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node13.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
@@ -431,7 +451,8 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node18.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
@@ -451,7 +472,8 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node19.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
@@ -471,7 +493,8 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node9.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
@@ -491,7 +514,8 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node1.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
@@ -511,7 +535,8 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node3.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
