--- a/tests/integration/specs/gossip_basic.toml
+++ b/tests/integration/specs/gossip_basic.toml
@@ -30,12 +30,14 @@ k = 2
 p = 0.7
 
 [initial_nodes.node25.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node25.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -60,12 +62,14 @@ k = 2
 p = 0.7
 
 [initial_nodes.node3.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node3.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -90,12 +94,14 @@ k = 2
 p = 0.7
 
 [initial_nodes.node12.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node12.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -120,12 +126,14 @@ k = 2
 p = 0.7
 
 [initial_nodes.node2.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node2.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -150,12 +158,14 @@ k = 2
 p = 0.7
 
 [initial_nodes.node18.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node18.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -180,12 +190,14 @@ k = 2
 p = 0.7
 
 [initial_nodes.node19.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node19.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -210,12 +222,14 @@ k = 2
 p = 0.7
 
 [initial_nodes.node21.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node21.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -240,12 +254,14 @@ k = 2
 p = 0.7
 
 [initial_nodes.node14.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node14.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -270,12 +286,14 @@ k = 2
 p = 0.7
 
 [initial_nodes.node9.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node9.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -300,12 +318,14 @@ k = 2
 p = 0.7
 
 [initial_nodes.node17.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node17.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -330,12 +350,14 @@ k = 2
 p = 0.7
 
 [initial_nodes.node6.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node6.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -360,12 +382,14 @@ k = 2
 p = 0.7
 
 [initial_nodes.node7.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node7.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -390,12 +414,14 @@ k = 2
 p = 0.7
 
 [initial_nodes.node20.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node20.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -420,12 +446,14 @@ k = 2
 p = 0.7
 
 [initial_nodes.node4.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node4.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -450,12 +478,14 @@ k = 2
 p = 0.7
 
 [initial_nodes.node5.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node5.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -480,12 +510,14 @@ k = 2
 p = 0.7
 
 [initial_nodes.node13.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node13.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -510,12 +542,14 @@ k = 2
 p = 0.7
 
 [initial_nodes.node8.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node8.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -540,12 +574,14 @@ k = 2
 p = 0.7
 
 [initial_nodes.node15.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node15.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -570,12 +606,14 @@ k = 2
 p = 0.7
 
 [initial_nodes.node22.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node22.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -600,12 +638,14 @@ k = 2
 p = 0.7
 
 [initial_nodes.node11.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node11.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -630,12 +670,14 @@ k = 2
 p = 0.7
 
 [initial_nodes.node24.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node24.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -660,12 +702,14 @@ k = 2
 p = 0.7
 
 [initial_nodes.node10.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node10.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -690,12 +734,14 @@ k = 2
 p = 0.7
 
 [initial_nodes.node1.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node1.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -720,12 +766,14 @@ k = 2
 p = 0.7
 
 [initial_nodes.node23.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node23.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -750,12 +798,14 @@ k = 2
 p = 0.7
 
 [initial_nodes.node16.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node16.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
