--- a/tests/integration/specs/killnode.toml
+++ b/tests/integration/specs/killnode.toml
@@ -23,11 +23,13 @@ Protocol = "Flooding"
     [initial_nodes.node1.protocol]
         Protocol = "Flooding"
     [initial_nodes.node1.radio_short]
-        reliability = 1.0
+        mac_layer_retries = 7
+mac_layer_base_wait = 8
         interface_name = "wlan0"
         range = 100.0
     [initial_nodes.node1.radio_long]
-        reliability = 1.0
+        mac_layer_retries = 7
+mac_layer_base_wait = 8
         interface_name = "wlan1"
         range = 100.0
 
@@ -45,11 +47,13 @@ Protocol = "Flooding"
     [initial_nodes.node2.protocol]
             Protocol = "Flooding"
     [initial_nodes.node2.radio_short] #Short-range radio
-        reliability = 1 #Not used in device_mode
+        mac_layer_retries = 7
+mac_layer_base_wait = 8
         interface_name = "wlan0" #Not used in simulated_mode
         range = 100.0
     [initial_nodes.node2.radio_long] #Long-range radio
-        reliability = 1 #Not used in device_mode
+        mac_layer_retries = 7
+mac_layer_base_wait = 8
         interface_name = "wlan1" #Not used in simulated_mode
         range = 100.0
 
@@ -67,11 +71,13 @@ Protocol = "Flooding"
     [initial_nodes.node3.protocol]
                 Protocol = "Flooding"
     [initial_nodes.node3.radio_short] #Short-range radio
-        reliability = 1 #Not used in device_mode
+        mac_layer_retries = 7
+mac_layer_base_wait = 8
         interface_name = "wlan0" #Not used in simulated_mode
         range = 100.0
     [initial_nodes.node3.radio_long] #Long-range radio
-        reliability = 1 #Not used in device_mode
+        mac_layer_retries = 7
+mac_layer_base_wait = 8
         interface_name = "wlan1" #Not used in simulated_mode
         range = 100.0
 
