--- a/tests/integration/specs/mac_layer_basic.toml
+++ b/tests/integration/specs/mac_layer_basic.toml
@@ -33,12 +33,14 @@ y = 0.0
 Protocol = "Flooding"
 
 [initial_nodes.node21.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node21.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -61,12 +63,14 @@ y = 0.0
 Protocol = "Flooding"
 
 [initial_nodes.node16.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node16.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -89,12 +93,14 @@ y = 0.0
 Protocol = "Flooding"
 
 [initial_nodes.node9.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node9.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -117,12 +123,14 @@ y = 0.0
 Protocol = "Flooding"
 
 [initial_nodes.node8.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node8.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -145,12 +153,14 @@ y = 0.0
 Protocol = "Flooding"
 
 [initial_nodes.node5.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node5.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -173,12 +183,14 @@ y = 0.0
 Protocol = "Flooding"
 
 [initial_nodes.node6.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node6.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -201,12 +213,14 @@ y = 0.0
 Protocol = "Flooding"
 
 [initial_nodes.node1.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node1.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -229,12 +243,14 @@ y = 0.0
 Protocol = "Flooding"
 
 [initial_nodes.node10.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node10.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -257,12 +273,14 @@ y = 0.0
 Protocol = "Flooding"
 
 [initial_nodes.node11.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node11.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -285,12 +303,14 @@ y = 0.0
 Protocol = "Flooding"
 
 [initial_nodes.node7.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node7.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -313,12 +333,14 @@ y = 0.0
 Protocol = "Flooding"
 
 [initial_nodes.node4.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node4.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -341,12 +363,14 @@ y = 0.0
 Protocol = "Flooding"
 
 [initial_nodes.node13.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node13.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -369,12 +393,14 @@ y = 0.0
 Protocol = "Flooding"
 
 [initial_nodes.node3.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node3.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -397,12 +423,14 @@ y = 0.0
 Protocol = "Flooding"
 
 [initial_nodes.node15.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node15.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -425,12 +453,14 @@ y = 0.0
 Protocol = "Flooding"
 
 [initial_nodes.node2.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node2.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -453,12 +483,14 @@ y = 0.0
 Protocol = "Flooding"
 
 [initial_nodes.node17.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node17.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -481,12 +513,14 @@ y = 0.0
 Protocol = "Flooding"
 
 [initial_nodes.node22.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node22.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -509,12 +543,14 @@ y = 0.0
 Protocol = "Flooding"
 
 [initial_nodes.node14.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node14.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -537,12 +573,14 @@ y = 0.0
 Protocol = "Flooding"
 
 [initial_nodes.node23.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node23.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -565,12 +603,14 @@ y = 0.0
 Protocol = "Flooding"
 
 [initial_nodes.node20.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node20.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -593,12 +633,14 @@ y = 0.0
 Protocol = "Flooding"
 
 [initial_nodes.node24.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node24.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -621,12 +663,14 @@ y = 0.0
 Protocol = "Flooding"
 
 [initial_nodes.node12.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node12.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -649,12 +693,14 @@ y = 0.0
 Protocol = "Flooding"
 
 [initial_nodes.node25.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node25.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -677,12 +723,14 @@ y = 0.0
 Protocol = "Flooding"
 
 [initial_nodes.node18.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node18.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
@@ -705,12 +753,14 @@ y = 0.0
 Protocol = "Flooding"
 
 [initial_nodes.node19.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 30.0
 
 [initial_nodes.node19.radio_long]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan1"
 range = 60.0
 
