--- a/tests/integration/specs/rgr_route_discovery_retry.toml
+++ b/tests/integration/specs/rgr_route_discovery_retry.toml
@@ -29,7 +29,8 @@ y = 100.0 #Doesn't matter for this test
 x = 0.0
 y = 0.0
 [initial_nodes.node1.radio_short]
-reliability = 1.0
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 100.0
 
@@ -48,7 +49,8 @@ y = 100.0 #Doesn't matter for this test
 x = 0.0
 y = 0.0
 [initial_nodes.node2.radio_short]
-reliability = 1
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 interface_name = "wlan0"
 range = 100.0
 
@@ -67,7 +69,8 @@ y = 100.0 #Doesn't matter for this test
 x = 0.0
 y = 0.0
 [initial_nodes.node3.radio_short]
-reliability = 1
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 range = 100.0
 interface_name = "wlan0"
 
@@ -86,7 +89,8 @@ y = 100.0
 x = 0.0
 y = -3.5
 [initial_nodes.node4.radio_short]
-reliability = 1
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 range = 100.0
 interface_name = "wlan0"
 
@@ -105,7 +109,8 @@ y = 100.0 #Doesn't matter for this test
 x = 0.0
 y = 0.0
 [initial_nodes.node5.radio_short]
-reliability = 1
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 range = 100.0
 interface_name = "wlan0"
 
@@ -124,7 +129,8 @@ y = 100.0 #Doesn't matter for this test
 x = 0.0
 y = 0.0
 [initial_nodes.node6.radio_short]
-reliability = 1
+mac_layer_retries = 7
+mac_layer_base_wait = 8
 range = 100.0
 interface_name = "wlan0"
 
@@ -144,7 +150,8 @@ interface_name = "wlan0"
 # x = 0.0
 # y = 0.0
 # [initial_nodes.node7.radio_short]
-# reliability = 1
+# mac_layer_retries = 7
+mac_layer_base_wait = 8
 # range = 100.0
 # interface_name = "wlan0"
 
@@ -160,7 +167,8 @@ interface_name = "wlan0"
 # x = 0.0
 # y = 0.0
 # [initial_nodes.node8.radio_short]
-# reliability = 1
+# mac_layer_retries = 7
+mac_layer_base_wait = 8
 # delay = 0
 # range = 100.0
 # interface_name = "wlan0"
@@ -177,7 +185,8 @@ interface_name = "wlan0"
 # x = 0.0
 # y = 0.0
 # [initial_nodes.node9.radio_short]
-# reliability = 1
+# mac_layer_retries = 7
+mac_layer_base_wait = 8
 # range = 100.0
 # interface_name = "wlan0"
 
@@ -193,7 +202,8 @@ interface_name = "wlan0"
 # x = 0.0
 # y = 0.0
 # [initial_nodes.node10.radio_short]
-# reliability = 1
+# mac_layer_retries = 7
+mac_layer_base_wait = 8
 # range = 100.0
 # interface_name = "wlan0"
 
